app/src/App.css
@import "tailwindcss";
@import url("./styles/scrollbar.css");
@import url("./styles/buttons-input.css");
@import url("./styles/animations.css");
@import url("./styles/tooltips.css");
@import url("./styles/a11y.css");

@custom-variant dark (&:is(.dark *));

@theme {
  --breakpoint-*: initial;
  --breakpoint-thin: 850px;
  --breakpoint-medium: 1000px;
  --breakpoint-large: 1500px;
}

/* BASE ------------------------------------- */

html,
body {
  @apply bg-[#FFFFFC] text-black dark:bg-[#121212] dark:text-white;
  height: 100%;
  overflow: hidden;
}

* {
  font-size: 14px;
  font-weight: normal;
  user-select: none;
  color-scheme: dark;
  font-family: var(--font-family);
}

body {
  font-family: "Segoe UI", Arial, Helvetica, sans-serif;
  font-size: 16px;
}

button:focus,
input:focus,
select:focus,
dialog:focus {
  outline: none;
}

img {
  object-fit: cover !important;
}

select {
  appearance: none;
}

dialog {
  border: none !important;
  background-color: transparent;
  opacity: 0;
}

.title {
  @apply text-3xl opacity-50 text-black dark:text-white;
}

.language-item {
  @apply  p-0 text-left text-[#12121280] duration-150 hover:text-[#121212cc]
          motion-reduce:duration-0 dark:text-[#ffffff80] dark:hover:text-[#ffffffcc]
          cursor-pointer w-max
}

#modal.showModal {
  animation: dialogFadeIn 0.3s ease forwards;
}

#modal:not(.showModal) {
  animation: dialogFadeOut 0.2s ease forwards;
}

.loading::before {
  animation: loadingFadeOut 0.3s;
  opacity: 0;
}

.loadingIcon {
  animation: spin 3s linear infinite;
}

.toast.show {
  animation:
    normalFadeIn 0.2s forwards,
    normalFadeOut 0.2s 1.3s forwards;
}

.toast.show:hover {
  animation-play-state: paused;
}

body.user-is-tabbing button:focus-visible,
body.user-is-tabbing input:focus-visible,
body.user-is-tabbing select:focus-visible,
body.user-is-tabbing textarea:focus-visible,
body.user-is-tabbing dialog:focus-visible,
body.user-is-tabbing [tabindex]:focus-visible {
  outline: 2px solid #ffffff80 !important;
  outline-offset: 3px;
}

/* MISC ------------------------------------- */

*:not(body, svg, #loading, .game-card-sidebar, .game-card-icon),
[class*="tooltip-"]:after {
  border-radius: var(--border-radius);
}

.currentlyDragging {
  width: 100%;
  box-shadow: 0 -3px 0 0 #646464;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

